--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,84 +1,85 @@
-$lightblue : #6CBFEE;
+$lightblue : #AFDCF8;
 $darkblue :#3594CB;
 
 
+// @media screen and(min-width:500px) and(max-width:1024px){
 
-.container{
+  .container{
   width: 95%;
   margin :2%;
  display:inline-block;
  position:relative;
 
-.line{
-  width:4px;
-  margin-top: 20px;
-  height:1090px;
-  display: inline-block;
-  border:1px solid $lightblue;
-  border-radius:2px;
-  background-color:$lightblue;
-  position:absolute;
-  left:19%;
-  top:1%;
-  z-index: -1;
+  .line{
+    width:4px;
+    margin-top: 20px;
+    height:1620px;
+    display: inline-block;
+    border:1px solid $lightblue;
+    border-radius:2px;
+    background-color:$lightblue;
+    position:absolute;
+    left:19%;
+    top:1%;
+    z-index: -1;
 
-}
+  }
  
 }
-ul li{
-  display: inline-block;
-  width :100%;
-  list-style: none;
-  //vertical-align: top;
-
-}
-.date{
-  color:lightgrey;
-}
-
-.f{
-  color:$lightblue;
-}
-
-.f1{
-  color:$darkblue;
-}
-
-.first{
-  margin:5px 15px;
-  width:10%;
-  vertical-align:top;
-  text-align:right;
-  padding-right: 9px;
-  padding-top:-5px;
-  display:inline-block;
-}
-
-.line-icon{
-  vertical-align: top;
-  margin:10px;
-  display: inline-block;
-  vertical-align: top;
-}
-.round{
-  border-radius :50%;
-  border:3px solid $lightblue;
-  background-color:$lightblue;
-  i{
-    padding:1px;
-    color: $darkblue;
+  ul li{
+    display: inline-block;
+    width :100%;
+    list-style: none;
   }
+  .date{
+    color:lightgrey;
+  }
+
+  .f{
+    color:$lightblue;
+  }
+
+  .f1{
+    color:$darkblue;
+  }
+
+  .first{
+    margin:5px 15px;
+    width:10%;
+    vertical-align:top;
+    text-align:right;
+    padding-right: 9px;
+    padding-top:-5px;
+    display:inline-block;
+  }
+
+  .line-icon{
+    vertical-align: top;
+    margin:10px;
+    display: inline-block;
+    vertical-align: top;
+  }
+  .round{
+    border-radius :50%;
+    border:3px solid $lightblue;
+    background-color:$lightblue;
+    i{
+      padding:1px;
+      color: $darkblue;
+    }
 }
 
 .content{
   position:relative;
-  border-radius:2px;
+  border-radius:7px;
   background-color:$lightblue;
   width:50%;
-  //border:1px solid blue;
   margin:5px 0;
   display:inline-block;
-  padding: 0 5%;
+  //padding:5%;
+  p{
+    padding:5%;
+  }
 
      .arrow{
       position: absolute;
@@ -98,18 +99,17 @@ ul li{
  
 }
 
-
-
-
 .content1{
   position:relative;
-  border-radius:2px;
+  border-radius:7px;
   background-color:$darkblue;
   width:50%;
-  //border:1px solid blue;
   margin:5px 0;
   display:inline-block;
-  padding: 0 5%;
+  //padding:5%;
+  p{
+    padding:5%;
+  }
 
      .arrow{
       position: absolute;
@@ -126,8 +126,7 @@ ul li{
   h6{
     padding-left:2%;
   }
-  // p{
-  //   padding: 0 3%;
-  // }
   
 }
+
+
